--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-TIMEZONE_NAME = 'CET'
+TIMEZONE_NAME='CET'
 
-USER_ID=your_id_here
-API_KEY=your_api_here
+USER_ID1=your_user_id
+API_KEY1=your_api_key
 
 #poetry install  -> 설치
 #poetry run python main.py -> 실행
